2009-11-16  Felix Zielcke  <fzielcke@z-51.de>
	* util/mkisofs/name.c (FDECL3): Use isascii macro instead of
	relying that char is signed.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-11-16  Felix Zielcke  <fzielcke@z-51.de>
+
+	* util/mkisofs/name.c (FDECL3): Use isascii macro instead of
+	relying that char is signed.
+
 2009-11-16  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* fs/i386/pc/pxe.c (grub_pxefs_open): Correctly handle PXE choosing
