--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,21 @@
+2009-11-19  Robert Millan  <rmh.grub@aybabtu.com>
+
+	* conf/common.rmk (grub_mkisofs_SOURCES): Add `gnulib/progname.c'.
+	* util/mkisofs/mkisofs.c: Include `"progname.h"'.
+	(program_name): Remove.
+	(main): Initialize gettext support.
+
+	* util/mkisofs/eltorito.c: Gettexttize.
+	* util/mkisofs/joliet.c: Likewise.
+	* util/mkisofs/mkisofs.c: Likewise.
+	* util/mkisofs/mkisofs.h: Likewise.
+	* util/mkisofs/multi.c: Likewise.
+	* util/mkisofs/rock.c: Likewise.
+	* util/mkisofs/tree.c: Likewise.
+	* util/mkisofs/write.c: Likewise.
+
+	* po/POTFILES: Update with new files.
+
 2009-11-18  Robert Millan  <rmh.grub@aybabtu.com>
 
 	* util/mkisofs/eltorito.c: Fix minor mistake in license text.
