--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2009-11-19  Felix Zielcke  <fzielcke@z-51.de>
 
+	* Makefile.in (install-local): Add a missing backslash.
+
+2009-11-19  Felix Zielcke  <fzielcke@z-51.de>
+
 	* include/grub/x86_64/io.h: New file.
 
 2009-11-19  Robert Millan  <rmh.grub@aybabtu.com>
