2009-11-20  Felix Zielcke  <fzielcke@z-51.de>
	* configure.ac: Add `/usr/share/fonts/X11/misc/unifont.pcf.gz'
	to the list of unifont files to look for.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-11-20  Felix Zielcke  <fzielcke@z-51.de>
+
+	* configure.ac: Add `/usr/share/fonts/X11/misc/unifont.pcf.gz'
+	to the list of unifont files to look for.
+
 2009-11-19  Robert Millan  <rmh.grub@aybabtu.com>
 
 	Patch from Joe Auricchio <jauricchio@gmail.com>
