--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2009-11-21  Felix Zielcke  <fzielcke@z-51.de>
 
+	* Makefile.in (target): Use make's builtin $(shell) function
+	instead of calling directly $(SHELL) to create the locale directories,
+	inside the $(foreach) function.
+
+2009-11-21  Felix Zielcke  <fzielcke@z-51.de>
+
 	* util/grub-mkrescue.in: Print an error and usage if output option
 	has not been given.
 
