--- a/po/ca.po
+++ b/po/ca.po
@@ -63,7 +63,7 @@ msgstr ""
 #: util/i386/pc/grub-mkimage.c:321 util/i386/pc/grub-setup.c:587
 #, c-format
 msgid "Try ``%s --help'' for more information.\n"
-msgstr "Proveu «%s --help» per a obtenir més informació.\n"
+msgstr "Proveu Â«%s --helpÂ» per a obtenir mÃ©s informaciÃ³.\n"
 
 #: util/i386/pc/grub-mkimage.c:323
 #, c-format
@@ -894,7 +894,7 @@ msgstr ""
 #: normal/menu_text.c:270
 #, c-format
 msgid "   The highlighted entry will be booted automatically in %ds.    "
-msgstr "   L entrada seleccionada sera arrancada automaticament en %ds.  "
+msgstr "   L' entrada seleccionada serà arrancada automàticament en %ds.  "
 
 #: util/grub.d/10_kfreebsd.in:40
 msgid "%s, with kFreeBSD %s"
