--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-11-24  Felix Zielcke  <fzielcke@z-51.de>
+
+	* util/getroot.c (grub_util_is_dmraid): New function.
+	(grub_util_get_dev_abstraction): Treat dmraid and multipath
+	devices as normal ones, not as LVM.
+
 2009-11-23  Robert Millan  <rmh.grub@aybabtu.com>
 
 	* po/id.po: New file.
