--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-11-24  Felix Zielcke  <fzielcke@z-51.de>
 
+	* util/getroot.c (grub_util_get_dev_abstraction): Properly use
+	strncmp().
+
+2009-11-24  Felix Zielcke  <fzielcke@z-51.de>
+
 	* util/getroot.c (grub_util_is_dmraid): New function.
 	(grub_util_get_dev_abstraction): Treat dmraid and multipath
 	devices as normal ones, not as LVM.
