--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2009-11-24  Felix Zielcke  <fzielcke@z-51.de>
 
+	* util/Makefile.in (install-local): Fix the use of $lang shell variable.
+
+2009-11-24  Felix Zielcke  <fzielcke@z-51.de>
+
 	* util/Makefile.in (install-local): Convert a make `$(foreach)'
 	function to a normal shell `for'.
 
